--- a/Seller/OtherOrders.html
+++ b/Seller/OtherOrders.html
@@ -103,7 +103,15 @@
   <div class="row">
     
     <div class="">
-        <h5 class="font-weight-bold pb-2 pt-2"><i class="fas fa-map-marker-alt extra-fa-color mr-2"></i>Delivery Address <a href="./Cutomers.html"><button class="ml-3 btn btn-rounded pl-4 pr-4 pb-2 pt-2 extra-color-button-details">Details</button></a><br>  Mrignka Baruah </h5>
+        <h5 class="font-weight-bold pb-2 pt-2"><i class="fas fa-map-marker-alt extra-fa-color mr-2"></i>Delivery Address 
+
+            <a href="./Cutomers.html" class="">
+                <button class="ml-3 btn btn-rounded pl-4 pr-4 pb-2 pt-2 extra-color-button-details">
+                    Details
+                </button>
+            </a>
+            <br>  Mrignka Baruah </h5>
+            
       <h5>House no 15 <br> Near Greenland <br> North Lakhimpur <br>Assam <br>India <br>+911234567890 </h5>
     </div>
   </div>
