--- a/Buyer/specficiOrder.html
+++ b/Buyer/specficiOrder.html
@@ -73,10 +73,13 @@
       <a href="#">Clients</a>
       <a href="#">Contact</a>
     </div>
-  <nav class="navbar navbar-inverse navbar-dark navbar-static-top nav-back-style">
-      <button class="navbar-toggler nav-button-mob" style = "border: none;" data-toggle="dropdown" type="button" onclick="openNav()" >
-        <span>&#9776;</span>
-      </button>
+    <div class="bottom-nav">
+      <nav class="navbar navbar-inverse navbar-dark navbar-static-top nav-back-style extra-nav-bottom">
+        <button class="navbar-toggler nav-button-mob" style = "border: none;" data-toggle="dropdown" type="button" onclick="openNav()" >
+          <span>&#9776;</span>
+        </button>
+    
+     
 
 
       <div>
@@ -203,7 +206,7 @@
   </div>
 </section>
 
-
+</div>
 
 <!-- This section for mobile view -->
 <section class="mobile-order">
