--- a/Buyer/Payment Buyer.html
+++ b/Buyer/Payment Buyer.html
@@ -121,24 +121,16 @@
             <div class=" mx-auto row py-5 my-4">
                 <div class="cols-sm-4 mx-auto border-0 bg-white" style="width: 20rem;">
                     <div class="mx-auto py-4 pl-4 pr-0">
-
-
-
-
-
-
-
-
                         <form action="" method="post">
                             <div class="btn-group-toggle active" data-toggle="buttons">
                                 <label class="btn btn-outline-success active div1" for="1">
-                                <input type="radio" name="cycle" value="1" id="1" autocomplete="off" checked><i class="fa fa-money float-left fa-2x"></i> <h4 class="float-right">Cash on Delivery</h4>
+                                <input type="radio" name="cycle" value="1" id="1" autocomplete="off" checked><i class="fa fa-money float-left fa-2x mr-2"></i> <h4 class="float-right">Cash on Delivery</h4>
                               </label>
-                                <label class="btn btn-outline-success div1 my-2 py-2" for="2">
-                                <input type="radio" name="cycle" value="2" id="2" autocomplete="off"><i class="fa fa-google-wallet float-left fa-2x"></i> <h4>Pay Online</h4>
+                                <label class="btn btn-outline-success div1 my-2 py-2" for="2" style="width: 250px;" >
+                                <input type="radio" name="cycle" value="2" id="2" autocomplete="off"><i class="fas fa-laptop float-left fa-2x mr-2"></i><h4>Pay Online</h4>
                               </label>
                                 <label class="btn btn-outline-success div1" for="3">
-                                <input type="radio" name="cycle" value="3" id="3" autocomplete="off"> <i class="fa fa-credit-card float-left fa-2x"></i><h4 class="float-right">Wallet/Gift Cards</h4>
+                                <input type="radio" name="cycle" value="3" id="3" autocomplete="off"> <i class="fa fa-credit-card float-left fa-2x mr-2"></i><h4 class="float-right">Wallet/Gift Cards</h4>
                               </label>
                             </div>
                         </form>
