--- a/Buyer/home.html
+++ b/Buyer/home.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     >
-    <title>Basic</title>
+    <title>Home</title>
     <meta
       name="have-i-been-pwned-verification"
       value="7e8033561b1da752725ca93d9cebf1a2"
@@ -210,8 +210,17 @@
         </div>
       </div>
     </div>
-      
+</div>
 
+    <div class="navbar-fin pl-0 ml-0" id="myNavbar">
+      <a href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
+
+   
     <!-- Core Vendors JS -->
     <script src="./js/vendors.min.js" defer></script>
 
