--- a/Buyer/Mycart.html
+++ b/Buyer/Mycart.html
@@ -230,6 +230,13 @@
   </div>
 </section>
 
+<div class="navbar-fin" id="myNavbar">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
 
 
 <!-- This section for mobile view -->
