--- a/Buyer/Specific Shop.html
+++ b/Buyer/Specific Shop.html
@@ -244,6 +244,14 @@
                 </div>
               </div>
      
+              <div class="navbar-fin" id="myNavbar">
+                <a href="#home">Home</a>
+                <a href="#news">News</a>
+                <a href="#contact">Contact</a>
+                <a href="#about">About</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+              </div>
+            
 
     <!-- Core Vendors JS -->
     <script src="./js/vendors.min.js" defer></script>
