--- a/Buyer/Myorders.html
+++ b/Buyer/Myorders.html
@@ -160,7 +160,7 @@
           <p class="ml-4 mb-0">Red</p>
           <p class="ml-4 mb-0" >By Raja Electronics</p>
     </div>
-    <div class="row mr-0 ml-0">
+    <div class="row mr-0 ml-0 extra-help-space">
       <h4 class="ml-2">Your Review</h4><i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 m-2" id="starb"></i>
     </div>
       </div>
@@ -176,6 +176,13 @@
      
    </div>
    
+   <div class="navbar-fin" id="myNavbar">
+    <a href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+  </div>
 
     <!-- Core Vendors JS -->
     <script src="./js/vendors.min.js" defer></script>
