--- a/Buyer/Messages.html
+++ b/Buyer/Messages.html
@@ -116,13 +116,22 @@
       </div>
       <div class="container-fluid">
         <form class="d-flex">
-          <input class="form-control" style="background-color: #E8E8E8; margin-top: 350px; margin-left:30px" type="search" placeholder="Type your message.." aria-label="Search">
-          <button class="btn" style="margin-top: 340px; margin-left: 20px;" type="submit"><img class="image" src="img/Vector.png" alt=""></button>
+          <input class="form-control" style="background-color: #E8E8E8; margin-top: 300px; margin-left:30px" type="search" placeholder="Type your message.." aria-label="Search">
+          <button class="btn" style="margin-top: 290px; margin-left: 20px;" type="submit"><img class="image" src="img/Vector.png" alt=""></button>
         </form>
       </div>
     </div>
   </div>
   </div>
+
+  <div class="navbar-fin" id="myNavbar">
+    <a href="#home">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+  </div>
+
   <!-- Core Vendors JS -->
   <script src="./js/vendors.min.js" defer></script>
 
