--- a/Seller/Control_Center.html
+++ b/Seller/Control_Center.html
@@ -74,25 +74,16 @@
 
 
 
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav ml-auto nav-flex-icons">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-
-      </ul>
-
-    </div>
+    
     <form class="d-flex form-size">
       <input id="searchbar" class="form-control mr-2 " type="search" placeholder="Search products" aria-label="Search">
     </form>
     <ul class="nav-flex-icons "></ul>
+    <li class="nav-item nav-type">
+      <a class="nav-link">
+        <span><i class="fas fa-envelope-open-text fa-color fa-2x"></i></span>
+      </a>
+    </li>
     <li class="nav-item nav-type">
       <a class="nav-link">
         <span><i class="fas fa-shopping-cart fa-color fa-2x "></i></span>
@@ -103,6 +94,7 @@
         <span><i class="fas fa-bell fa-color fa-2x "></i></span>
       </a>
     </li>
+    
     </ul>
 
   </nav>
