--- a/Seller/Control_Center.html
+++ b/Seller/Control_Center.html
@@ -66,6 +66,11 @@
     <ul class="nav-flex-icons "></ul>
     <li class="nav-item nav-type">
       <a class="nav-link">
+        <span><i class="fas fa-envelope-open-text fa-color-front fa-2x"></i></span>
+      </a>
+    </li>
+    <li class="nav-item nav-type">
+      <a class="nav-link">
         <span><i class="fas fa-bell fa-color-front fa-2x"></i></span>
       </a>
     </li>
