--- a/Seller/Staff.html
+++ b/Seller/Staff.html
@@ -76,9 +76,9 @@
 
                         Daljeetsingh86 <span class="text-success">( Staff )</span><i class="fa fa-trash float-right "></i></div>
 
-                    <div class="card-body pb-3 pt-2 h6 ">
+                    <div class="card-body pb-3 pt-2 h6" style="padding-right: 10px;">
                         nqba121212
-                        <i class="fa fa-pencil float-right "></i>
+                        <button class="float-right" style="border: none; background-color: transparent;"><i class="fas fa-edit "></i></button>
 
                     </div>
                 </div>
