--- a/Seller/Extra Charges.html
+++ b/Seller/Extra Charges.html
@@ -63,22 +63,16 @@
                                 <button class="btn btn-outline-success" type="submit"><i class="fa fa-search"></i></button>
                             </form>
                         </div>
-
-
-
                     </div>
             </nav>
             </div>
             <div class="px-4 my-4 ">
                 <div class="card " style=" width: 18rem; ">
                     <div class="card-body pt-3 pb-2 h6 ">
-
                         Packing Charge <i class="fa fa-trash float-right "></i></div>
-
-                    <div class="card-body pb-3 pt-2 h6 ">
+                    <div class="card-body pb-3 pt-2 h6" style="padding-right: 10px;">
                         $ 50
-                        <i class="fa fa-pencil float-right "></i>
-
+                        <button class="float-right" style="border: none; background-color: transparent;"><i class="fas fa-edit "></i></button>
                     </div>
                 </div>
 
@@ -139,7 +133,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <!-- mycode end -->
 
