--- a/Buyer/Myorders.html
+++ b/Buyer/Myorders.html
@@ -130,7 +130,7 @@
 
    <div class="container">
      <div class="row">
-       <div class="col-12 col-md-12 col-lg-6 mb-3 pl-0 pr-0">
+       <div class="col-12 col-md-12 col-lg-6 mb-3 pl-0 pr-0 extra-mob-hide">
          <h4 class="ml-5">My Orders</h4> <br> <br>
          <img class="mt-4 " src="./img/shopping.jpeg" height="400" alt="">
        </div>
@@ -141,7 +141,7 @@
           <img src="./img/iphone.jpeg" alt="">
         </div>
         <div class="col-6">
-          <h5 class="ml-4 mt-4 mb-2">Apple iphone 12</h5>
+          <a style="text-decoration: none;" href="./specficiOrder.html"><h5 class="ml-4 mt-4 mb-2">Apple iphone 12</h5></a>
           <p class="ml-4 mb-0" >$999</p>
           <p class="ml-4 mb-0">Red</p>
           <p class="ml-4 mb-0" >By Raja Electronics</p>
@@ -155,13 +155,13 @@
         <img src="./img/iphone.jpeg" alt="">
       </div>
       <div class="col-6">
-        <h5 class="ml-4 mt-4 mb-2">Apple iphone 12</h5>
+        <a style="text-decoration: none;" href="./specficiOrder.html"><h5 class="ml-4 mt-4 mb-2">Apple iphone 12</h5></a>
           <p class="ml-4 mb-0" >$999</p>
           <p class="ml-4 mb-0">Red</p>
           <p class="ml-4 mb-0" >By Raja Electronics</p>
     </div>
     <div class="row mr-0 ml-0 extra-help-space">
-      <h4 class="ml-2">Your Review</h4><i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 m-2" id="starb"></i>
+     <h4 class="ml-2">Your Review</h4>  <a href = "Myorders.html" style="text-decoration: none;"><i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 mt-2" id="star"></i> <i class="fas fa-solid fa-star fa-lg ml-2 m-2" id="starb"></i></a> 
     </div>
       </div>
       
