--- a/Seller/Business detail.html
+++ b/Seller/Business detail.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Basic</title>
+  <title>Business Details</title>
   <meta name="have-i-been-pwned-verification" value="7e8033561b1da752725ca93d9cebf1a2"
     content="width=device-width, initial-scale=1">
 
