--- a/Buyer/Specific Shop.html
+++ b/Buyer/Specific Shop.html
@@ -167,10 +167,10 @@
                     <li class="li-split"> <i class="fas fa-undo-alt li-pad"></i> Return Policy</li>
                     <li class="li-split mb-2"><i class="fas fa-star li-pad"></i>Reviews</li>
                   </ul>
-                  <div class="text-lg-start button-tab tab-mob ">
+                  <div class="text-lg-start button-tab tab-mob text-center">
                     <button
                     type="button"
-                    class="btn btn-success btn-lg btn-register btn-mob pl-2 pr-4 pt-1 pb-2 mb-2 align-left"
+                    class="btn btn-success btn-lg btn-register btn-mob pl-2 pr-4 pt-1 pb-2 mb-2 text-center"
                     
                   >
                     <b class="extra-bold-size"><i class="fas fa-phone-alt fa-space"></i>Call</b>
