--- a/Buyer/location.html
+++ b/Buyer/location.html
@@ -91,7 +91,7 @@
                 <div class="row row-class">
                   <div class="col-lg-8 space-left">
                     <input list="country" name="myCountry" id="form3Example4"
-                    class="form-control form-control-lg form-text" placeholder="Select Country" /></label>
+                    class="form-control form-control-lg form-text" placeholder="Select Country" />                  
                     <datalist class="country-text" id="country">
                         <option value="Afganistan">Afghanistan</option>
                         <option value="Albania">Albania</option>
@@ -351,7 +351,7 @@
                   
                   <div class="col-lg-8  space-left">
                     <input list="state" name="myState" id="form3Example4"
-                    class="form-control form-control-lg form-text" placeholder="Select State" /></label>
+                    class="form-control form-control-lg form-text" placeholder="Select State" />
                     <datalist class="state-text" id="state">
                         <option value="Andhra Pradesh">Andhra Pradesh</option>
                             <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands</option>
