--- a/Buyer/Specific Product.html
+++ b/Buyer/Specific Product.html
@@ -138,6 +138,17 @@
         <h2 class="mb-2">Light blue t shirt</h2>
         <h4><span class="font-weight-bold">$199</span><span class="text-secondary"> 249</span></h4>
         <h5 class="pt-1 pb-2"><i class="fas fa-star text-success"></i> 4.9 (35 ratings)</h5>
+        <h5 class="pt-1 pb-2 mob-display-none"> <b>Variants</b>  </h5>
+        <div class="row mob-display-none" >
+          <div class="col-sm-3 mb-3">
+            <button class="extra-all-same" style="width: 60px;">Red</button>
+            <button class="ml-4 pl-1 extra-all-same-active">Blue</button>
+            <button class="ml-4 pl-1 extra-all-same" style="width: 75px;">Orange</button>
+            <button class="ml-4 extra-all-same" style="width: 60px;">Black</button>
+          </div>
+          
+
+        </div>
         <h5 class="font-weight-bold">Product info</h5>
         <h5 class="w-75 mt-2 product-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus commodi
           dicta sit eos, nulla aliquam, inventore hic ipsam ipsa doloribus optio sequi accusamus, at expedita.</h5>
