--- a/Buyer/Specific Product.html
+++ b/Buyer/Specific Product.html
@@ -225,12 +225,9 @@
   </section>
 
 
-  <div class="navbar-fin" id="myNavbar">
-    <a href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+  <div class="navbar-fin text-center" id="myNavbar">
+    <a class="text-center" style="margin-left: auto; margin-right: auto; width: 100%;" href="./specficiOrder.html">Buy Now</a>
+   
   </div>
 
 
