--- a/Buyer/Specific Product.html
+++ b/Buyer/Specific Product.html
@@ -20,6 +20,7 @@
   <link href="./css/main.css" rel="stylesheet" />
   <!-- Bootstrap  CSS-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+  
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
   <!--Bootstrap JS-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -41,6 +42,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -59,7 +61,7 @@
 
 
     <div>
-      <button style="border: none; background: transparent;"><i class="fas fa-map-marker-alt fa-color-front-loc fa-color-front-mob fa-2x"></i></button>
+      <button style="border: none; background: transparent;"><i class="fas fa-map-marker-alt fa-color-front-loc fa-color-front-mob fa-mob-out fa-2x"></i></button>
       <span class="navbar-text mob-color" id="heading">
         <b>New Delhi,India</b>
       </span>
@@ -69,7 +71,7 @@
     <ul class="nav-flex-icons "></ul>
     <li class="nav-item nav-type">
       <a class="nav-link">
-        <span><i class="fas fa-bell fa-color-front fa-2x"></i></span>
+        <span><i class="fas fa-bell fa-color-front fa-2x fa-mob-out-bell"></i></span>
       </a>
     </li>
 
@@ -159,7 +161,7 @@
           <h5 class="font-weight mb-2"><a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse2" ><i class="fas fa-shopping-bag text-secondary pr-3"></i>Product Details </a></h5>
           <a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse2" ><i class="fas fa-chevron-down align-right"></i></a>
         </div>
-        <div id="collapse2" class="panel-collapse collapse">
+        <div id="collapse2" class="collapse">
           <p>Loreum ipsum Loreum hshs shvhhsu hsvysx </p>
         </div>
 
@@ -177,7 +179,7 @@
         <hr class="mt-4 mb-4">
 
         <div class="d-flex justify-content-between">
-          <h5 class="font-weight"><a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse3" ><i class="fas fa-truck text-secondary pr-3"></i>Shipping Information</a></h5>
+          <h5 class="font-weight"><a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse3" ><i class="fas fa-truck text-secondary pr-3 "></i>Shipping Information</a></h5>
           <a class="extra-toggle-collapse" data-toggle="collapse" href="#collapse3" ><i class="fas fa-chevron-down"></i></a> 
         </div>
         <div id="collapse3" class="panel-collapse collapse">
