--- a/Buyer/OrderType.html
+++ b/Buyer/OrderType.html
@@ -131,7 +131,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4"></div>
-                        <div class="mx-auto button1 mx-auto col-sm-12"><button type="button" class="btn btn-success button"><p class="h4 text-light">Continue</p></button></div>
+                        <div class="mx-auto button1 mx-auto col-sm-12 text-center mb-2"><button type="button" class="btn btn-success button"><p class="h4 text-light">Continue</p></button></div>
                     </div>
                 </div>
 
