--- a/Seller/Control_Center.html
+++ b/Seller/Control_Center.html
@@ -112,14 +112,14 @@
       <div class="col-6 col-md-2 col-lg-2 ">
         <div class="shadow p-4 mb-5 bg-white rounded mr-2 " style="height:160px; width:140px;" >
           <img src="./img/invoice.png" class="ml-4"alt="" >
-          <p> <b>Invoicing</b></p>
+          <p class="pt-2"> <b>Invoicing</b></p>
         </div>
     </div>
         <div class="col-6 col-md-2 col-lg-2  ">
           <div class="shadow p-4 mb-4 ml-1 pr-3 bg-white rounded " style="height:160px; width:160px;" >
           <img src="./img/order.png" alt="" class="pendingorder"> 
-          <p class="mt-1"><b>Orders</b></p>
-          <p class="mt-2 " class="porder">1 pending order</p>
+          <p class="mt-2 mb-1"><b>Orders</b></p>
+          <p class="mt-1 pb-1 " class="porder">1 pending order</p>
           </div>
         </div>
        
@@ -131,13 +131,13 @@
       <div class="col-6 col-md-2 col-lg-2">
         <div class="shadow bg-white rounded " style="height: 110px; width: 140px;">
           <img src="./img/products.png" alt="" class="mt-4 ml-4"class="proimg">
-          <p class="mr-3">products</p>
+          <p class="mr-3 mt-1"> <b>Products</b> </p>
         </div>
       </div>
       <div class="col-6 col-md-2 col-lg-2">
         <div class="shadow bg-white rounded "  style="height: 110px; width: 160px;" class="proimg">
         <img src="./img/Analytics.png" class="ml-4"alt=""  >
-        <p>Analytics</p>
+        <p class="mt-1"> <b>Analytics</b></p>
         </div>
       </div>
     </div>
@@ -152,37 +152,37 @@
         <div class="col-4 col-md-3 col-lg-2 mt-2 mb-2">
           <div class="shadow ml-1 mr-1 bg-white rounded extra-space-div">
             <img class = "extra-space-img mb-1" src="./img/bookkeeping.png" alt="" class=" ml-3">
-            <p>bookkeeping</p>
+            <p> <b>Bookkeeping</b> </p>
           </div>
          </div>
          <div class="col-4 col-md-3 col-lg-2 mt-2">
            <div class="shadow bg-white rounded mr-2 extra-space-div">
              <img class = "extra-space-img mb-1" src="./img/extracharge.png" alt="">
-             <p>extra charge</p>
+             <p>  <b>Extra charge</b> </p>
            </div>
          </div>
          <div class="col-4 col-md-3 col-lg-2 mt-2">
           <div class="shadow bg-white rounded extra-space-div">
             <img class = "extra-space-img mb-1" src="./img/Shipping.png" alt="">
-            <p>Shipping</p>
+            <p>  <b>Shipping</b> </p>
           </div>
         </div>
         <div class="col-4 col-md-3 col-lg-2 mt-2">
           <div class="shadow bg-white rounded extra-space-div" >
             <img class = "mb-2 ml-4 pl-2 w-50" src="./img/About Store.png" class="ml-3" alt="" width="50">
-            <p>About Store</p>
+            <p> <b>About Store</b> </p>
           </div>
         </div>
         <div class="col-4 col-md-3 col-lg-2 mt-2 ">
           <div class="shadow bg-white rounded extra-space-div">
             <img class = "mb-1 ml-4 mt-3" src="./img/Payment.png" alt="" >
-            <p>Payment</p>
+            <p class="mt-1"> <b>Payment</b> </p>
           </div>
         </div>
         <div class="col-4 col-md-3 col-lg-2 mt-2 ">
           <div class="shadow bg-white rounded extra-space-div">
             <img class = "extra-space-img mb-1" src="./img/Staff.png" alt="">
-            <p>Staff</p>
+            <p> <b>Staff</b> </p>
           </div>
         </div>
       </div>
