--- a/Seller/Add Product.html
+++ b/Seller/Add Product.html
@@ -40,9 +40,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script> 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
+<script>
+  $("#my-input").autogrow();
+</script>
 <body>
 
   <!-- Add Product -->
@@ -57,11 +61,11 @@
           <label for="image"><i class="fas fa-image img-icon text-secondary p-3"></i></label>
           <input class="d-none" type="file" name="" id="image">
           <form action="">
-            <div class="form-group">
+            <div class="form-group" contenteditable="true">
               <label for="my-input">
                 <h5>Product name</h5>
               </label>
-              <input id="my-input" class="form-control border-0 mb-5" type="text" name="">
+              <input id="my-input" class="form-control border-0 mb-5" type="text" name="" contenteditable="true">
             </div>
             <div class="form-group">
               <label for="my-input">
@@ -90,15 +94,15 @@
               <button class="btn btn-primary pl-3 pr-3" type="button">Add</button>
             </div>
             <div class="button-green ml-4 extra-space-align">
-              <button class="btn btn-success p-0 pr-1 extra-button-space" type="button">Red <i
+              <button style="background-color: #2ECC71; color: white;" class="btn p-0 pr-1 extra-button-space" type="button">Red <i
                   class="far fa-times-circle text-white ml-1"></i></button>
-              <button class="btn btn-success p-0 pl-1 pr-1 ml-3" type="button">Green <i
+              <button style="background-color: #2ECC71; color: white;" class="btn p-0 pl-1 pr-1 ml-3" type="button">Green <i
                   class="far fa-times-circle text-white ml-1"></i></button>
             </div>
           </div>
           <div class="price-details border p-3 mt-5 rounded d-flex justify-content-between">
             <div>
-              <button class="btn btn-success p-0 pl-3 pr-3" type="button">Red</button>
+              <button style="background-color: #2ECC71; color: white;" class="btn p-0 pl-3 pr-3" type="button">Red</button>
             </div>
             <div class="input">
               <form>
@@ -135,6 +139,7 @@
   </section>
 
 
+ 
 
   <!-- Core Vendors JS -->
   <script src="./js/vendors.min.js" defer></script>
