--- a/Seller/Add Detail.html
+++ b/Seller/Add Detail.html
@@ -34,6 +34,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Libre Barcode 39' rel='stylesheet'>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script> 
+
 </head>
 
 <body>
@@ -45,7 +47,7 @@
             <div class="h5">About</div>
             <label class="d-md-none">Help users to know more about your business</label>
             <div class="form-outline w-100 mb-4">
-                <textarea class="form-control" id="textAreaExample6" rows="5" placeholder="">Help users to know more about your business</textarea>
+                <textarea class="form-control" id="textAreaExample6" rows="5" placeholder="Help users to know more about your business"></textarea>
                 <textarea class="form-control d-md-none" id="textAreaExample6" rows="3"></textarea>
             </div>
         </div>
@@ -53,16 +55,19 @@
             <div class="h5">Return Policy</div>
             <label class="d-md-none">Mention about your return policy in details</label>
             <div class="form-outline w-100 mb-4">
-                <textarea class="form-control sm-hidden" id="textAreaExample6" rows="8" placeholder="">Mention about your return policy in details</textarea>
+                <textarea id="txtInput" class="form-control sm-hidden" id="textAreaExample6" rows="8" placeholder="Mention about your return policy in details" contenteditable="true"></textarea>
                 <textarea class="form-control d-md-none" id="textAreaExample6" rows="3"></textarea>
             </div>
             <div class="d-flex">
-                <button class="bg-success">Submit</button>
+                <button style="background-color: #2ECC71; font-size: 20px;" class="ml-5" >Submit</button>
             </div>
         </div>
     </div>
 
 
+    <script>
+        $("#txtInput").autogrow();
+    </script>
 
 
 
@@ -70,6 +75,7 @@
     <script src="./js/vendors.min.js" defer></script>
 
     <!-- page js -->
+    <script src="./js/index.js"></script>
     <!-- Carousel JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.js" defer></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
