--- a/Buyer/Myorders.html
+++ b/Buyer/Myorders.html
@@ -130,11 +130,11 @@
 
    <div class="container">
      <div class="row">
-       <div class="col-12 col-md-12 col-lg-6 mb-3 pl-0 pr-0 extra-mob-hide">
+       <div class="col-12 col-md-12 col-lg-6 mb-3 pl-0 pr-0 ">
          <h4 class="ml-5">My Orders</h4> <br> <br>
-         <img class="mt-4 " src="./img/shopping.jpeg" height="400" alt="">
+         <img class="mt-4 extra-mob-out" src="./img/shopping.jpeg" height="400" alt="">
        </div>
-       <div class="col-12 col-md-12 col-lg-5 mb-3 mt-5 ">
+       <div class="col-12 col-md-12 col-lg-5 mb-3 extra-mob-hide">
         <h4>Arriving on 1 July, 2021 </h4>
         <div class="row">
         <div class="col-6">
@@ -176,14 +176,13 @@
      
    </div>
    
-   <div class="navbar-fin" id="myNavbar">
-    <a href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+   <div class="navbar-fin pl-0 ml-0" id="myNavbar">
+    <a href="#home"> <img src="./img/Home.png" alt="">  Home</a>
+    <a href="./Allshoplist.html"> <img src="./img/Shop.png" alt=""> Shop</a>
+    <a href="./Search.html"> <img src="./img/Search.png" alt=""> Search</a>
+    <a href="./Mycart.html"> <img src="./img/Cart.png" alt=""> Cart</a>
+    <a href="./My Profile.html"> <img src="./img/Profile.png" alt=""> Profile</a>
   </div>
-
     <!-- Core Vendors JS -->
     <script src="./js/vendors.min.js" defer></script>
 
