--- a/Buyer/Messages.html
+++ b/Buyer/Messages.html
@@ -124,12 +124,12 @@
   </div>
   </div>
 
-  <div class="navbar-fin" id="myNavbar">
-    <a href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+  <div class="navbar-fin pl-0 ml-0" id="myNavbar">
+    <a href="#home"> <img src="./img/Home.png" alt="">  Home</a>
+    <a href="./Allshoplist.html"> <img src="./img/Shop.png" alt=""> Shop</a>
+    <a href="./Search.html"> <img src="./img/Search.png" alt=""> Search</a>
+    <a href="./Mycart.html"> <img src="./img/Cart.png" alt=""> Cart</a>
+    <a href="./My Profile.html"> <img src="./img/Profile.png" alt=""> Profile</a>
   </div>
 
   <!-- Core Vendors JS -->
