--- a/Seller/Messages 2nd.html
+++ b/Seller/Messages 2nd.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Messages</title>
+  <title>Messages 2nd</title>
   <meta name="have-i-been-pwned-verification" value="7e8033561b1da752725ca93d9cebf1a2" />
   <!-- Favicon -->
   <link rel="shortcut icon" href="/final/images/logo/favicon.png" />
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- page css -->
-  <link rel="stylesheet" href="extra/Seller Messages.css">
+  <link rel="stylesheet" href="extra/Seller Messages 2.css">
   <!-- Carousel CSS -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-  <div class="first-one">
+  <div class="first">
     <nav class="navbar navbar-dark bg-success">
       <div class="dot1" onclick="myFunction(this)">
         <div class="bar1"></div>
@@ -60,7 +60,7 @@
     </nav>
   </div>
 
-  <div class="Second-one">
+  <div class="Second">
     <div class="row">
     <div class="col-lg-4 container-fluid inmes" style="margin-left: 50px;">
       <table style="margin-top: 40px">
@@ -122,58 +122,6 @@
       </div>
     </div>
   </div>
-  </div>
-
-
-  <!--Mobile View-->
-  <div class="first">
-    <h3 style="margin-top: 20px; margin-left: 30px">Message</h3>
-  </div>
-  <div class="col-lg-3 container-fluid second ml-0 mr-0 pl-0 pr-0" style="margin-left: 20px;margin-right: 50px;">
-    <a style="color: black;" href="./Messages 2nd.html"> <table style="margin-top: 30px">
-      <tr>
-        <td><img style="margin-right: 10px;" src="img/Rectangle 1.png" alt=""></td>
-        <td>
-          <table>
-            <tr>
-              <td>
-                <h5></h5>
-              </td>
-              <td  class="len1">8:30 am</td>
-            </tr>
-            <tr>
-              <td>Have You recived the item?</td>
-              <td class="len2">
-                <h6 class="round">2</h6>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table></a>
-    <table>
-      <tr>
-        <td><img style="margin-right: 10px;" src="img/Rectangle 10.png" alt="" height="55" width="55"></td>
-        <hr class="len">
-        <td>
-          <table>
-            <tr>
-              <td>
-                <h5></h5>
-              </td>
-              <td class="len3">02/06/21</td>
-            </tr>
-            <tr>
-              <td><i class="fas fa-check"></i> I am not satisfied with the product.</td>
-              <td></td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-    <div class="len4">
-      <h6 style="color: grey;">No more messages</h6>
-    </div>
   </div>
   <!-- Core Vendors JS -->
   <script src="./js/vendors.min.js" defer></script>
