--- a/Seller/Add Product.html
+++ b/Seller/Add Product.html
@@ -19,19 +19,14 @@
   <link href="./css/app.min.css" rel="stylesheet" />
   <link href="./css/main.css" rel="stylesheet" />
   <!-- Bootstrap  CSS-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
   <!--Bootstrap JS-->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
   </script>
   <!-- IMPORT FONT -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,8 +35,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script> 
- 
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
+
 </head>
 
 
@@ -59,24 +54,42 @@
           <label for="image"><i class="fas fa-image img-icon text-secondary p-3"></i></label>
           <input class="d-none" type="file" name="" id="image">
           <form action="">
-            <div class="form-group" contenteditable="true">
+            <div class="h5">Product name</div>
+            <label class="d-md-none">Product name</label>
+            <div class="form-outline w-100 mb-4">
+              <textarea class="form-control" id="textAreaExample6" rows="1" placeholder=""></textarea>
+              <textarea class="form-control d-md-none" id="textAreaExample6" rows="3"></textarea>
+            </div>
+            <!-- <div class="form-group" contenteditable="true">
               <label for="my-input">
                 <h5>Product name</h5>
               </label>
               <input id="my-input" class="form-control border-0 mb-5" type="text" name="" contenteditable="true">
+            </div> -->
+            <div class="h5">Product meta description</div>
+            <label class="d-md-none">Product meta description</label>
+            <div class="form-outline w-100 mb-4">
+              <textarea class="form-control" id="textAreaExample6" rows="1" placeholder=""></textarea>
+              <textarea class="form-control d-md-none" id="textAreaExample6" rows="3"></textarea>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="my-input">
                 <h5>Product meta description</h5>
               </label>
               <input id="my-input" class="form-control border-0 mb-5" type="text" name="">
+            </div> -->
+            <div class="h5">Product description</div>
+            <label class="d-md-none">Product description</label>
+            <div class="form-outline w-100 mb-4">
+              <textarea class="form-control " id="textAreaExample6" rows="1" placeholder=""></textarea>
+              <textarea class="form-control d-md-none" id="textAreaExample6" rows="3"></textarea>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="my-input">
                 <h5>Product description</h5>
               </label>
               <input id="my-input" class="form-control border-0" type="text" name="">
-            </div>
+            </div> -->
           </form>
         </div>
         <div class="col-md-6">
@@ -88,14 +101,12 @@
             </div>
           </div>
           <div class="button mt-4 mb-4 d-flex">
-            <div> 
+            <div>
               <button class="btn btn-primary pl-3 pr-3" type="button">Add</button>
             </div>
             <div class="button-green ml-4 extra-space-align">
-              <button style="background-color: #2ECC71; color: white;" class="btn p-0 pr-1 extra-button-space" type="button">Red <i
-                  class="far fa-times-circle text-white ml-1"></i></button>
-              <button style="background-color: #2ECC71; color: white;" class="btn p-0 pl-1 pr-1 ml-3" type="button">Green <i
-                  class="far fa-times-circle text-white ml-1"></i></button>
+              <button style="background-color: #2ECC71; color: white;" class="btn p-0 pr-1 extra-button-space" type="button">Red <i class="far fa-times-circle text-white ml-1"></i></button>
+              <button style="background-color: #2ECC71; color: white;" class="btn p-0 pl-1 pr-1 ml-3" type="button">Green <i class="far fa-times-circle text-white ml-1"></i></button>
             </div>
           </div>
           <div class="price-details border p-3 mt-5 rounded d-flex justify-content-between">
@@ -137,7 +148,7 @@
   </section>
 
 
- 
+
 
   <!-- Core Vendors JS -->
   <script src="./js/vendors.min.js" defer></script>
@@ -148,13 +159,24 @@
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
   <!-- Core JS -->
-  <script src="./js/app.min.js"></script>
+<script src="./js/app.min.js"></script>
+ <script type="text/javascript">
+   const tx = document.getElementsByTagName("textarea");
+   for (let i = 0; i < tx.length; i++) {
+      tx[i].setAttribute("style", "height:" + (tx[i].scrollHeight) + "px;overflow-y:hidden;");
+      tx[i].addEventListener("input", OnInput, false);
+    }
 
+    function OnInput() {
+      this.style.height = "auto";
+      this.style.height = (this.scrollHeight) + "px";
+    }
+ </script>
   <!-- Facebook Pixel Code -->
   <script>
-    !(function (f, b, e, v, n, t, s) {
+    !(function(f, b, e, v, n, t, s) {
       if (f.fbq) return;
-      n = f.fbq = function () {
+      n = f.fbq = function() {
         n.callMethod ?
           n.callMethod.apply(n, arguments) :
           n.queue.push(arguments);
